--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
 .b-main {
 	display: flex;
 	flex-direction: column;
-	height: 100vh;
+	height: 95vh;
 	justify-content: center;
 	margin: 0 auto;
 	width: 450px;
@@ -42,14 +42,14 @@ body {
 }
 .b-head__title {
 	margin: 0;
-	font-size: 32px;
+	font-size: 25px;
 }
 .b-head__theme {
 	align-items: center;
 	color: var(--b-key);
 	display: grid;
-	font-size: 12px;
-	grid-template: repeat(2, 25px) / repeat(2, 75px);
+	font-size: 10px;
+	grid-template: repeat(2, 20px) / repeat(2, 60px);
 	grid-template-areas: 
 		". options"
 		"text switch";
@@ -70,17 +70,17 @@ body {
 	box-sizing: border-box;
 	display: flex;
 	grid-area: switch;
-	height: 26px;
+	height: 20px;
 	justify-content: space-between;
-	padding: 5px;
+	padding: 4px;
 }
 .b-switch__radio {
 	appearance: none;
 	border-radius: 50%;
-	height: 16px;
+	height: 13px;
 	margin: 0;
 	outline: none;
-	width: 16px;
+	width: 13px;
 }
 input.b-switch_theme_blue:checked {
 	background-color: var(--b-key-red);
@@ -154,15 +154,46 @@ input.b-switch_theme_blue:checked {
 @media only screen and (max-width: 600px){
 	.b-main {
 		width: 325px;
-
+		
 	}
+	/* Head */
 	.b-head {
 		align-items: center;
+	}
+	.b-head__title {
+		font-size: 32px;
+	}
+	.b-head__theme {
+		font-size: 12px;
+		grid-template: repeat(2, 25px) / repeat(2, 75px);
+		grid-template-areas: 
+		". options"
+		"text switch";
+	}
+	.b-switch {
+		height: 26px;
+		padding: 5px;
+	}
+	.b-switch__radio {
+		height: 16px;
+		width: 16px;
 	}
 
 	/* Screen */
 	.b-screen {
 		height: 40px;
 		margin: 30px 0 25px;
+	}
+	.b-screen__result {
+		font-size: 30px;
+	}
+
+	/* Keypad */
+	.b-keypad {
+		grid-gap: 14px;
+		height: 375px;
+	}
+	.b-keypad__key {
+		border-radius: 5px;
 	}
 }
