--- a/styles.css
+++ b/styles.css
@@ -131,13 +131,14 @@ body {
 	background-color: var(--b-screen);
 	border-radius: 10px;
 	display: flex;
+	font-size: 40px;
 	height: 60px;
 	justify-content: flex-end;
 	margin: 25px 0 20px;
 	padding: 25px;
 }
 .b-screen__result {
-	font-size: 40px;
+	font-size: 1em;
 }
 
 /* Keypad */
@@ -224,7 +225,7 @@ body {
 		margin: 30px 0 25px;
 	}
 	.b-screen__result {
-		font-size: 30px;
+		font-size: 0.75em;
 	}
 
 	/* Keypad */
